Adjustment for loading images big size

--- a/Wilson/Base.lproj/Main.storyboard
+++ b/Wilson/Base.lproj/Main.storyboard
@@ -1043,8 +1043,8 @@
     <inferredMetricsTieBreakers>
         <segue reference="ac5-fG-lMU"/>
         <segue reference="YLp-6U-xhM"/>
-        <segue reference="ogT-83-hAH"/>
-        <segue reference="34U-WB-9Ko"/>
+        <segue reference="yOK-zZ-j4f"/>
         <segue reference="ph3-bC-SQg"/>
+        <segue reference="34U-WB-9Ko"/>
     </inferredMetricsTieBreakers>
 </document>
